# ror-server

./: .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README  README.md  SimpleOpt.h  conanfile.py  conanfile.txt  doxygen.cfg  florence scps  listener.cpp  listener.h  logger.h  messaging.cpp  messaging.h  motd.txt  mutexutils.h  notifier.cpp  notifier.h  premake.lua  receiver.cpp  receiver.h  rornet.h  rorserver.cpp  run.sh  sconstruct  sequencer.cpp  sequencer.h  sha1_util.cpp  sha1_util.h
dependencies/: CMakeLists.txt
dependencies/angelscript/: CMakeLists.txt  source.txt
dependencies/angelscript/include/: angelscript.h
dependencies/angelscript/source/: as_atomic.cpp  as_builder.cpp  as_callfunc.cpp  as_callfunc_ppc_64.cpp  as_callfunc_x86.cpp  as_compiler.cpp  as_config.h  as_configgroup.h  as_context.h  as_criticalsection.h  as_datatype.cpp  as_debug.h  as_memory.h  as_module.cpp  as_module.h  as_objecttype.cpp  as_parser.h  as_restore.h  as_scriptengine.cpp  as_scriptobject.h  as_scriptstruct.cpp  as_string.cpp  as_string_util.h  as_texts.h  as_thread.h  as_tokenizer.cpp
dependencies/ctemplate/: CMakeLists.txt  COPYING  config.h.in  version.txt
dependencies/ctemplate/src/: template.cc  template_cache.cc  template_dictionary.cc
dependencies/jsoncpp/: CMakeLists.txt  version.txt
dependencies/rudeconfig/: CMakeLists.txt  Makefile
dependencies/rudeconfig/src/: ConfigImpl.h  ParserJuly2004.cpp
dependencies/socketw/: CMakeLists.txt  SocketW.h  sw_base.cxx  sw_base.h  sw_config.h  sw_config.h.in  sw_inet.cxx  sw_inet.h  sw_internal.h  sw_ssl.cxx  sw_ssl.h  sw_unix.cxx  sw_unix.h
dependencies/win32_pthread/: .gitignore  CMakeLists.txt  README.md  pthread.h
source/: CMakeLists.txt  HttpMsg.cpp  HttpMsg.h  ScriptEngine.cpp  ScriptEngine.h  Vector3.h  broadcaster.cpp  broadcaster.h  config.cpp  config.h  ctime_r.cpp  icon.rc  listener.cpp  logger.cpp  logger.h  messaging.cpp  messaging.h  mutexutils.cpp  mutexutils.h  notifier.cpp  notifier.h  receiver.cpp  receiver.h  rornet.h  rorserver.cpp  sequencer.cpp  sequencer.h  sha1.c  sha1_util.cpp  sha1_util.h  userauth.cpp  userauth.h  utils.cpp  utils.h  webserver.cpp  webserver.h
source/angelscript_add_on/: CMakeLists.txt
source/angelscript_add_on/scriptarray/: scriptarray.cpp
source/angelscript_add_on/scriptbuilder/: scriptbuilder.cpp
source/angelscript_add_on/scriptstdstring/: scriptstdstring_utils.cpp
source/common/: BitFlags.h  UnicodeStrings.h
source/gui/: CMakeLists.txt  play.xpm  servergui.cpp  statpict.cpp  statpict.h
source/protocol/: rornet.h
source/server/: CMakeLists.txt  CurlHelpers.cpp  CurlHelpers.h  HttpMsg.cpp  HttpMsg.h  ScriptEngine.cpp  ScriptEngine.h  ScriptFileSafe.cpp  ScriptFileSafe.h  SimpleOpt.h  UTFString.cpp  UTFString.h  api.cpp  api.h  blacklist.cpp  blacklist.h  broadcaster.cpp  broadcaster.h  client.cpp  client.h  config.cpp  config.h  dispatcher.cpp  dispatcher.h  dispatcher_enet.cpp  dispatcher_enet.h  http.cpp  http.h  icon.rc  listener.cpp  listener.h  logger.cpp  logger.h  macros.h  master-server.cpp  master-server.h  messaging.cpp  messaging.h  mongoose.c  mongoose.h  (+32 more)
source/web/: header.cpsp  index.cpsp  playerlist-test.cpsp  playerlist.cpsp  playerlist_test.cpsp
trunk/: .cproject  CMakeLists.txt  README  banned_users  broadcaster.cpp  broadcaster.h  doxygen.cfg  listener.cpp  messaging.cpp  messaging.h  motd.txt  notifier.cpp  notifier.h  premake.lua  receiver.cpp  rornet.h  rorserver.cpp  sconscript  sequencer.cpp  sequencer.h  sha1_util.h
trunk/PDCurses-3.3/: curspriv.h
trunk/PDCurses-3.3/demos/: firework.c  ptest.c  rain.c  tuidemo.c  worm.c
trunk/PDCurses-3.3/dos/: pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcscrn.c  pdcsetsc.c
trunk/PDCurses-3.3/os2/: pdcsetsc.c  pdcutil.c
trunk/PDCurses-3.3/pdcurses/: addch.c  beep.c  bkgd.c  clear.c  debug.c  delch.c  deprec.c  getstr.c  initscr.c  instr.c  kernel.c  pad.c  panel.c  printw.c  scanw.c  scr_dump.c  slk.c  touch.c  util.c  window.c
trunk/PDCurses-3.3/sdl1/: pdcclip.c  pdcgetsc.c  pdckbd.c  pdcutil.c
trunk/PDCurses-3.3/win32/: pdcclip.c  pdckbd.c  pdcscrn.c  pdcwin.h
trunk/PDCurses-3.3/x11/: compose.h  ncurses_cfg.h  pdcclip.c  pdcgetsc.c  pdcscrn.c  pdcutil.c  pdcx11.h  sb.c  x11.c
trunk/SocketW/: README  Todo
trunk/SocketW/docs/: inet.html  unix.html
trunk/SocketW/examples/: cert.pem  client.cxx
trunk/SocketW/src/: sw_base.cxx  sw_base.h  sw_config.h  sw_ssl.cxx
trunk/angelscript/: CMakeLists.txt
trunk/angelscript/include/: angelscript.h
trunk/angelscript/source/: as_array.h  as_builder.cpp  as_builder.h  as_callfunc_sh4.cpp  as_callfunc_xenon.cpp  as_compiler.cpp  as_compiler.h  as_context.h  as_datatype.cpp  as_gc.cpp  as_gc.h  as_module.cpp  as_objecttype.cpp  as_parser.cpp  as_restore.cpp  as_scriptengine.h  as_scriptfunction.cpp  as_scriptstruct.h  as_string.cpp  as_texts.h
trunk/contrib/: example-auth.auth  example-config.cfg  rorserver-initscript.in
trunk/contrib/tools/: rornet.py
trunk/dependencies/angelscript/: CMakeLists.txt  source.txt
trunk/dependencies/ctemplate/: CMakeLists.txt  libtool
trunk/dependencies/jsoncpp/: CMakeLists.txt
trunk/dependencies/rudeconfig/: CMakeLists.txt  cmake_install.cmake  source.txt
trunk/dependencies/socketw/: CMakeLists.txt  sw_base.h  sw_internal.h
trunk/python/: EchoClient.py  client.py  gamebot.py  rornet.py  server.py
trunk/servergui/: CMakeLists.txt  servergui.cpp  shutdown.xpm  statpict.h  stop.xpm  stop_dis.xpm
trunk/socketw/: CMakeLists.txt  sw_base.cxx
trunk/source/: CMakeLists.txt  HttpMsg.cpp  HttpMsg.h  ScriptEngine.cpp  ScriptEngine.h  Vector3.h  broadcaster.cpp  broadcaster.h  config.cpp  config.h  listener.cpp  listener.h  logger.cpp  logger.h  messaging.cpp  messaging.h  mongoose.c  mutexutils.cpp  mutexutils.h  notifier.cpp  notifier.h  receiver.cpp  receiver.h  rornet.h  rorserver.cpp  sequencer.cpp  sequencer.h  sha1.h  sha1_util.cpp  sha1_util.h  userauth.cpp  userauth.h  utils.cpp  utils.h  webserver.cpp
trunk/win32/: PDCurses.lib  SocketW.lib  server_LAN.bat
(+495 files in other folders)
